--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/urdf_launch
-	previous = 
-	base = b595a6baa8c3
+	previous = b595a6baa8c3
+	base = 2941754dcaf6
 	trim = 
 	trimbase = 
