--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/urdf_launch
+	parent = release/rolling/urdf_launch/0.1.1-2
 	previous = b595a6baa8c3
 	base = a83883ccf62b
 	trim = 
